--- a/app/views/answers/answer.html.erb
+++ b/app/views/answers/answer.html.erb
@@ -1,5 +1,4 @@
-<h1>Your Question</h1>
-<p><%= @question %></p>
-
+<h1>Question</h1>
 <h1>Answer</h1>
+<p><%= @question %></p>
 <p><%= @answer %></p>
