--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,40 @@
  *= require_tree .
  *= require_self
  */
+.bo{
+  font-family: 'Indie Flower', cursive;
+  text-align: center;
+  font-size: 77px;
+  color: rgb(15, 137, 137);
+}
+.u2{
+  font-family: 'Indie Flower', cursive;
+  text-align: center;
+  font-size: 77px;
+  color: rgb(15, 137, 137);
+}
+.u5{
+  font-size: 27px;
+  color:red;
+  text-align: center;
+}
+.u4{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  font-size: 45px;
+}
 
+
+
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+
+@media (max-width: 576px) {
+  body {
+    font-size: 12px;
+  }
+}
